# XSpatialNovae

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-histology.txt  requirements-uv.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
configs/: default_mapping.yaml  example_run.yaml
examples/: example_workflow.py
novae_seurat_gui/: __init__.py  cli.py
novae_seurat_gui/cluster_interpretation/: __init__.py  markers.py  summaries.py  utils.py  visualization.py
novae_seurat_gui/export/: __init__.py  manifest.py  writers.py
novae_seurat_gui/io/: __init__.py  convert.py  converter.py  loader.py  validator.py
novae_seurat_gui/modeling/: __init__.py  novae_runner.py  parameters.py
novae_seurat_gui/niche/: __init__.py  clustering.py  composition.py
novae_seurat_gui/qc/: __init__.py  filters.py  summaries.py
novae_seurat_gui/spatial/: __init__.py  diagnostics.py  neighbors.py
novae_seurat_gui/utils/: __init__.py  deps.py
novae_seurat_gui/viz/: __init__.py  embedding_plots.py  spatial_plots.py
scripts/: convert_seurat_rds_to_h5ad.R  convert_seurat_rds_to_h5ad.R.new  download_models.py
tests/: conftest.py  test_cluster_interpretation.py  test_convert.py  test_export.py  test_installation.py  test_io.py  test_qc.py  test_spatial.py
