[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novae-seurat-gui"
version = "0.1.0"
description = "Python-first workflow to run Novae spatial foundation model on Seurat objects with interactive GUI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EISA Science", email = "info@eisascience.com"}
]
keywords = ["spatial-transcriptomics", "spatial-proteomics", "novae", "seurat", "anndata", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "anndata>=0.9.0",
    "scanpy>=1.9.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.13.0",
    "streamlit>=1.20.0",
    "pyyaml>=6.0",
    "pyarrow>=10.0.0",
    "scikit-learn>=1.2.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
    "h5py>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.scripts]
novae-seurat-gui = "novae_seurat_gui.cli:main"

[project.urls]
Homepage = "https://github.com/eisascience/XSpatialNovae"
Repository = "https://github.com/eisascience/XSpatialNovae"
Issues = "https://github.com/eisascience/XSpatialNovae/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["novae_seurat_gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=novae_seurat_gui --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
